--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vuedx-typecheck . && vite build"
   },
   "dependencies": {
+    "element-plus": "^1.0.1-beta.23",
     "vue": "^3.0.5"
   },
   "devDependencies": {
