--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "vite-project",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vuedx-typecheck . && vite build"
+    "dev": "NODE_ENV=development vite",
+    "build-dev": "NODE_ENV=development vite build",
+    "build-prd": "NODE_ENV=production vite build",
+    "lint": "lint-staged ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "element-plus": "^1.0.1-beta.23",
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.0.4",
+    "@types/node": "^14.14.20",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typecheck": "^0.4.1",
     "@vuedx/typescript-plugin-vue": "^0.4.1",
