--- a/machine-geek-ts/package.json
+++ b/machine-geek-ts/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.12.2",
     "craco-antd": "^1.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "typescript": "^4.1.2",
