--- a/machine-geek-hd/package.json
+++ b/machine-geek-hd/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "koa": "^2.13.1",
-    "koa-router": "^10.0.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.0.0",
+    "mongoose": "^5.11.16"
   },
   "name": "machine-geek-hd",
   "version": "1.0.0",
