--- a/machine-geek-hd/package.json
+++ b/machine-geek-hd/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "mongoose": "^5.11.16"
@@ -10,7 +11,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon router.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
